<resources>
    <string name="app_name">HikingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login2">Login</string>
    <string name="type_your_name">Type your name</string>
    <string name="type_your_password_again">Type your password again</string>
    <string name="sign_up2">Sign Up</string>
    <string name="new_activity">New Actıvıty</string>
    <string name="act_v_ty_h_story">Actıvıty Hıstory</string>
    <string name="start">Start</string>
    <string name="end">END</string>
    <string name="dashboard">Dashboard</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="add_item">Add Item</string>
    <string name="Leaderboard">Leaderboard</string>
    <string name="runover">RunOver</string>
    <string name="details">Details</string>
</resources>